Changes since labca_3_4:
Changes since labca_3_3:
	2012/01/13 (TS):
	- README.win32pathwithblanks: updated info.
	- documentation/Makefile: use portable workaround for mkdir -p
	  (w/o causing errors if target dir is already present).
	2012/01/12 (TS):
	- glue/Makefile: re-enabled mx_DIR + friends (non-windows only)
	- matlab/lcaSetMonitor.c, matlab/lcaNewMonitorWait.c,
	  matlab/lcaNewMonitorValue.c: removed unused 'i' variable.
	- matlab/Makefile: enable warnings for MEX compiler (linux).
	- testing/Makefile: always build lcaTest.m (even under scilab) so that
	  it is present for distribution.
	- ReleaseNotes: updated.
	- glue/Makefile:
	   o win32/64 scilab-5 needs 'output_stream' and 'intersci'
	     libraries in addition to LibScilab :-(. Manual intervention is
	     needed to build for scilab-4 (define SCILAB_V4 makefile variable).
	   o Commented unused library paths (libmx_DIR + friends).
	   o Use 'psed' (perl) instead of 'sed' and use double quotes for
	     sake of win-non-cygwin portability.
	   o Use 'vpath' instead of symlink to find sciclean.c for sake
	     of win-non-cygwin portability.
	2012/01/11 (TS):
	- glue/ctrlC-polled.c: scilab-5 seems to properly export + declare
	  'basbrk' (even under windows) so we use it.
	- glue/multiEzca.c: silence compiler warnings (64-bit?)  by
	  using ptrdiff_t instead of int and explicit type conversions
	  where appropriate.
	- glue/mglue.c, glue/mglue.h: silence compiler warnings (64-bit?) by
	  using size_t instead of int where appropriate.
	- documentation/Makefile: removed run-time test for scilab version (too
	  hard to get to work under windows). We just in stall the scilab-5 help
	  files anyways.
	- configure/RELEASE: removed CONFIG-SLAC hacks - doesn't work as intended.
	- configure/CONFIG: added defaults for 'windows-x64'
	- configure/RULES: avoid complicated shell commands (which windows command.com
	  is unable to unerstand).
	2012/01/11 (TS):